--- a/Savemydrone/app/build.gradle
+++ b/Savemydrone/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.android.support:cardview-v7:21.0.+'
     androidTestCompile 'junit:junit:4.12'
 }
